# sharinghub-server

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  pyproject.toml  requirements-docs.txt  requirements.txt
.github/workflows/: publish.yml  test.yml
app/: __init__.py  config.py  config.yaml  configuration.py  dependencies.py  gitlab.py  main.py  router.py  session.py  settings.py  utils.py  views.py
app/api/: auth.py  category.py  gitlab.py  search.py  stac.py
app/api/providers/: __init__.py  base.py  gitlab.py
app/auth/: __init__.py  api.py  depends.py  settings.py  views.py
app/providers/: __init__.py  schemas.py
app/providers/client/: __init__.py  _base.py  gitlab.py
app/providers/views/: __init__.py  checker.py  download.py  proxy.py
app/stac/: __init__.py  settings.py  views.py
app/stac/api/: __init__.py  build.py  category.py  search.py
app/store/: __init__.py  settings.py  views.py
app/utils/: __init__.py  cache.py  config.py  geo.py  http.py  markdown.py  openapi.py
app/views/: __init__.py  auth.py  configuration.py  download.py  proxy.py  resolve.py  s3_controller.py  stac.py  store.py
deploy/compose/: docker-compose.yml
deploy/compose/services/nginx/: Dockerfile  nginx.conf
deploy/compose/services/server/: Dockerfile
deploy/compose/services/web-ui/: Dockerfile
deploy/helm/: values.cnes.yaml  values.yaml
deploy/helm/gitlab2stac/: Chart.yaml  values.yaml
deploy/helm/gitlab2stac/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deploy/helm/gitlab2stac/templates/tests/: test-connection.yaml
deploy/helm/sharinghub/: values.yaml
deploy/helm/sharinghub/templates/: deployment.yaml
docs/: PySTAC_Search.ipynb  mkdocs.en.yml  mkdocs.fr.yml  mkdocs.yml
docs/notebooks/: PySTAC_Search.ipynb
docs/src/: index.md  manage_large_dataset.md
docs/src/en/: index.md
docs/src/explore/: auth.md  categories.md  overview.md  project-view.md  search.md  stac-api.md
docs/src/fr/: index.md  privacy.md
docs/src/resources/: ogc.md
docs/src/share/metadata/: configuration.md  dataset-case.md  index.md  model-case.md  reference.md  stac-concepts.md
docs/src/share/metadata/project/: common.md  dataset-case.md  model-case.md
docs/src/tutorials/: manage_dataset_with_dvc.md  manage_dataset_with_shell.md
resources/: gunicorn.conf.py  stac_config.yaml  topics.yaml
scripts/: copyright.py
